# databricks_bundle_validator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  quality.yml
src/databricks_bundle_validator/: __init__.py  __main__.py  cli.py  crawler.py  inject.py  mappings.py
src/databricks_bundle_validator/_tests/databricks_bundles/single_file/: databricks.yml
src/databricks_bundle_validator/_tests/databricks_bundles/use_include/: databricks.yml
src/databricks_bundle_validator/_tests/databricks_bundles/use_include/wildcard/: include_1.yml  include_2.yml
tests/: test_cli.py
tests/assets/databricks_bundles/invalid_permissions_file/: databricks.yml
tests/assets/databricks_bundles/single_file/: databricks_copy.yml
tests/assets/databricks_bundles/use_include/: databricks.yml  include.yml
tests/assets/databricks_bundles/use_include/wildcard/: include_1.yml  include_2.yml
